# dvm-finance

./: .gitignore  CLAUDE.md  LICENSE  PHASE4_FILES_MANIFEST.md  PHASE4_REFERENCE.md  PHASE_T5_COMPLETION_REPORT.md  PHASE_T5_INDEX.md  PHASE_T5_TEST_PLAN.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: publish.yml
alembic/: env.py
alembic/versions/: 10222b47646b_initial_schema.py  7dd060546159_add_updated_at_export_state_snapshot_.py  d42e198530e9_add_is_tag_only_field_to_.py
docs/: QUALITY_SCORE.md  architecture.md  core-beliefs.md  developer.md  product.md  tech-debt-tracker.md
docs/phase/: 00-START-HERE.md  INDEX.md  PHASE2-BEFORE-AFTER.md  PHASE2-COMPONENT-REFERENCE.md  PHASE2-IMPLEMENTATION-GUIDE.md  PHASE2-QUICK-START.md  PHASE2-README.md  PHASE2-TRANSITION-NOTES.md  PHASE3_IMPLEMENTATION_NOTES.md  PHASE3_INTEGRATION_GUIDE.md  PHASE3_README.md  PHASE3_SUMMARY.md  PHASE3_VISUAL_REFERENCE.md  PHASE4_SUMMARY.md  _empty_state.html  _transactions_table_phase3.html  phase2-bootstrap-redesign.md  phase2-transactions.html  phase2.js  phase3-transactions.html  phase4-implementation.md  phase4-quickstart.md
docs/phase/init/: phase-summary.md  progress-overview.md  review.md  spec.md  status.md
docs/phase/init/01-project-setup/: summary-01-project-setup.md  task.md
docs/phase/init/02-database-schema/: summary-02-database-schema.md  task.md
docs/phase/init/03-parsers-and-dedup/: summary-03-parsers-and-dedup.md  task.md
docs/phase/init/04-rule-engine/: summary-04-rule-engine.md  task.md
docs/phase/init/05-import-pipeline-and-upload/: summary-05-import-pipeline-and-upload.md  task.md
docs/phase/init/06-transactions-view/: PHASE1-BOOTSTRAP-IMPLEMENTATION.md  summary-06-transactions-view.md  task.md
docs/phase/init/07-rules-ui/: summary-07-rules-ui.md  task.md
docs/references/: abn-amro-protocol-reference.txt  alpinejs-reference.txt  fastapi-reference.txt  htmx-reference.txt  paypal-protocol-reference.txt  platformdirs-reference.txt  playwright-reference.txt
ios/: .gitignore  ExportOptions.plist  README.md  project.yml
ios/DVMFinance/: AppEnvironment.swift  DVMFinanceApp.swift  Formatting.swift  PrivacyInfo.xcprivacy  SampleData.swift  Theme.swift
ios/DVMFinance/Views/: BudgetEditView.swift  BudgetsView.swift  CategoryPickerView.swift  FilterSheet.swift  HelpView.swift  ImportHistoryView.swift  ImportView.swift  TagPickerView.swift  TransactionDetailView.swift  TransactionsView.swift  TrendsView.swift
ios/DVMFinanceKit/: Package.swift
ios/DVMFinanceUITests/: ScreenshotTests.swift
ios/docs/: plan.md  spec.md
ios/docs/app-store/: metadata.md  privacy-policy.md  submission-checklist.md
src/abn_combined/: __init__.py  __main__.py  app.py  cli.py  constants.py  db.py  logging_config.py  migrations.py  settings.py
src/abn_combined/api/: budgets.py  cash_flow.py  downloads.py  help.py  rules.py  snapshots.py  tags.py  transactions.py  trends.py  upload.py
src/abn_combined/core/: __init__.py  budget_report.py  cash_flow.py  categorizer.py  dedup.py  filters.py  importer.py  jobs.py  legacy_migration.py  models.py  renames.py  rule_prefill.py  snapshots.py  trends.py  utils.py
src/abn_combined/downloaders/: __init__.py  abn.py  paypal.py
src/abn_combined/parsers/: __init__.py  csv.py  description.py  mt940.py  paypal.py  seb.py  utils.py  wise.py  xls.py
src/abn_combined/web/help/: features.md  (+1 more)
tests/: conftest.py  test_api_transfer_exclusion.py  test_app_shell.py  test_budgets.py  test_cash_flow.py  test_categorizer.py  test_categorizer_perf.py  test_cli.py  test_dedup.py  test_downloads.py  test_downloads_routes.py  test_filters.py  test_help.py  test_jobs.py  test_legacy_migration.py  test_migrations.py  test_models.py  test_parsers.py  test_paypal_parser.py  test_renames.py  test_rule_prefill.py  test_rules_ui.py  test_seb_parser.py  test_snapshots.py  test_snapshots_delta.py  test_snapshots_e2e.py  test_snapshots_routes.py  test_tags.py  test_transactions.py  test_transfer_exclusion.py  test_trends.py  test_trends_routes.py  test_upload.py  test_wise_parser.py
tests/e2e/: conftest.py  test_flows_e2e.py
tests/fixtures/: legacy_fixture.py  seb_sample.csv  wise_sample.csv
(+121 files in other folders)
