[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/abn_combined/__init__.py"

[project]
name = "dvm-finance"
description = "Integrated personal-finance app: download, parse, categorize, and review bank statements."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Divya van Mahajan" }]
keywords = ["finance", "banking", "personal-finance", "fastapi", "sqlite", "mt940", "budgeting"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Intended Audience :: End Users/Desktop",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "sqlalchemy>=2",
    "alembic",
    "platformdirs",
    "python-multipart",
    "structlog",
    "pandas",
    "openpyxl",
    "xlrd",
]

[project.optional-dependencies]
downloads = [
    "playwright",
]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "ruff",
    "playwright",
    "pytest-playwright",
]

[project.urls]
Homepage = "https://github.com/divyavanmahajan/abn-combined"
Repository = "https://github.com/divyavanmahajan/abn-combined"
Issues = "https://github.com/divyavanmahajan/abn-combined/issues"

[project.scripts]
dvm-finance = "abn_combined.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/abn_combined"]

# Bundle the Alembic migration tree inside the wheel so packaged/uvx installs run
# real migrations on startup (not the create_all fallback). Maps repo-root paths
# into the installed package (site-packages/abn_combined/alembic{,.ini}).
[tool.hatch.build.targets.wheel.force-include]
"alembic" = "abn_combined/alembic"
"alembic.ini" = "abn_combined/alembic.ini"

[tool.hatch.build.targets.sdist]
include = [
    "src/abn_combined",
    "alembic",
    "alembic.ini",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not slow and not e2e'"
markers = [
    "slow: long-running performance benchmarks",
    "e2e: end-to-end browser tests",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["abn_combined"]
omit = ["*/downloaders/*", "*/tests/*"]

[tool.coverage.report]
fail_under = 80
